--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,24 @@
-<h1>Welcome</h1>
-  <nav>
-    <button routerLink="/home" routerLinkActive="active">Home</button>
-    <button routerLink="/about" routerLinkActive="active">About</button>
-  </nav>
+<!-- <nav class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand"  routerLink="/" routerLinkActive="active">Project name</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+              <base href="/">
+            <li ><a routerLink="/api" routerLinkActive="active">Home</a></li>
+            <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+            
+          </ul>
+        </div><!-- /.nav-collapse -->
+      </div><!-- /.container -->
+    </nav> -->
+  <li ><a routerLink="/api" routerLinkActive="active">Home</a></li>
+            <li><a routerLink="/about" routerLinkActive="active">About</a></li>
   <router-outlet></router-outlet>
