CSS added for navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <nav class="navbar navbar-fixed-top navbar-inverse">
+ <nav class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -11,14 +11,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-              <base href="/">
-            <li ><a routerLink="/api" routerLinkActive="active">Home</a></li>
+              <li ><a routerLink="/home" routerLinkActive="active">Home</a></li>
             <li><a routerLink="/about" routerLinkActive="active">About</a></li>
             
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
-    </nav> -->
-  <li ><a routerLink="/api" routerLinkActive="active">Home</a></li>
-            <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-  <router-outlet></router-outlet>
+    </nav> 
+  
+  <router-outlet ></router-outlet>
