--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -9,3 +9,11 @@ body {
   top: 5rem;
   background: #eeeeee
 }
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
